<resources>
    <string name="company">龙鼎科技有限公司</string>
    <string name="app_name">LDBM</string>
    <string name="action_settings">Settings</string>
    <string name="input_userName">用户名</string>
    <string name="input_password">密码</string>
    <string name="input_serverPath">服务器地址</string>
    <string name="button_login">登录</string>
    <string name="btn_forgetPsd">忘记密码？</string>
    <string name="bottom_bar_home">首页</string>
    <string name="bottom_bar_weixiu">维修</string>
    <string name="bottom_bar_zhengche">整车</string>
    <string name="bottom_bar_peijian">配件</string>
    <string name="bottom_bar_baobiao">报表</string>
    <string name="home_view_search"> 搜索</string>
    <string name="menu_item_addShortcut">添加快捷功能</string>
    <string name="menu_item_addFix">添加配件</string>
    <string name="menu_item_addCar">添加车辆</string>
    <string name="menu_item_addFix_hint">点击添加配件</string>
    <string name="menu_item_addCar_hint">点击添加车辆</string>

    <string name="menu_item_top">置顶</string>
    <string name="menu_item_delete">移除</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="save_fail_carcode">车牌号已存在</string>
    <string name="appointment_yy">预约维修</string>
    <string name="appointment_yy_query">预约维修查询</string>
    <string name="progresslist_query">维修进度查询</string>
    <string name="carlist_query">在库车辆查询</string>
    <string name="carcode_query">车辆信息查询</string>
    <string name="invoice_select">发票信息</string>
    <string name="new_carcode">添加车辆信息</string>
    <string name="appointment_wx">维修接待</string>
    <string name="appointment_wx_query">维修接待查询</string>
    <string name="client_query">客户信息查询</string>
    <string name="new_client">添加客户信息</string>
    <string name="form_toolbar_back">返回</string>
    <string name="form_toolbar_import">导入</string>
    <string name="form_toolbar_save">保存</string>
    <string name="repair_title">维修管理</string>
    <string name="part_title">配件管理</string>
    <string name="wholecar_title">整车管理</string>
    <string name="report_title">报表管理</string>
    <string name="negotiate_title">洽谈单</string>
    <string name="negotiate_person_title">个人洽谈单</string>
    <string name="negotiate_company_title">公司洽谈单</string>
    <string name="save_car_purchase_title">整车销售单</string>
    <string name="save_fix_sale_title">配件销售单</string>
    <string name="save_fix_info_title">新建配件信息</string>
    <string name="save_fix_purchase_title">配件采购单</string>
    <string name="icon_bottomBar_home">&#xe604;</string><!--首页图标-->
    <string name="icon_bottomBar_repair">&#xe645;</string><!--维修图标-->
    <string name="icon_bottomBar_car">&#xe6bb;</string><!--整车图标-->
    <string name="icon_bottomBar_part">&#xe600;</string><!--配件图标-->
    <string name="icon_bottomBar_report">&#xe618;</string><!--报表图标-->
    <string name="report_jingYing">经营统计</string>
    <string name="report_kuCun">库存统计</string>
    <string name="report_weiXiu">维修统计</string>
    <string name="report_shouKuan">收款统计</string>
    <string name="report_keHuZhangWuTJ">客户账务统计</string>
    <string name="report_jinHuoHuiZong">进货汇总</string>
    <string name="report_caiGouDingDan">采购订单</string>
    <string name="report_gongYingShangLeiJi">供应商累计供货排行</string>
    <string name="report_yingYeE">营业额</string>
    <string name="report_xiaoShouJiHua">销售计划分析表</string>
    <string name="report_keHuXiaoShouE">客户销售额排行</string>
    <string name="report_riQiXiaoShou">日期销售报表</string>
    <string name="report_cangKuXiaoShou">仓库销售排行</string>
    <string name="report_xiaoShouRenYuanYJ">销售人员业绩</string>
    <string name="report_cheLiangXiaoShou">车辆销售</string>
    <string name="report_yuanGongXiaoShou">员工销售</string>
    <string name="report_renYuanHuiKuan">人员回款</string>
    <string name="report_yueXiaoShou">月销售</string>
    <string name="report_shangPinLeiJiJH">商品累计进货</string>
    <string name="report_leiJiShangPinXS">累计商品销售</string>
    <string name="report_shangPinJinHuoYFX">商品进货月分析</string>
    <string name="report_chengBenYiChang">成本异常</string>
    <string name="report_queHuoBaoJing">缺货报警</string>
    <string name="report_fuKuCunBaoJing">负库存报警</string>
    <string name="select_geRenQiaTan">个人洽谈</string>
    <string name="select_gongSiQiaTan">公司洽谈</string>
    <string name="select_xiaoShouDan">整车销售单</string>
    <string name="select_peiJianXiaoShouDan">配件销售单</string>
    <string name="select_peiJianCaiGouDan">配件采购单</string>
    <string name="select_yueYueWeiXiu">预约维修</string>
    <string name="select_weiXiuJieDai">维修接待</string>



    <string name="action_about">about</string>
    <string name="action_view_file">viewFile</string>
    <string name="action_view_image">viewImage</string>
    <string name="hello_world">Hello world!</string>
    <string name="Pick">重新拍摄</string>
    <string name="planedetect">提取牌照</string>
    <string name="str_proc">Car Plate Detection and Recognition</string>
    <string name="wait_detect">等待检测.</string>

</resources>
