<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c9dbec" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical" >

        <com.daiyinger.carplate.DragImageView
            android:id="@+id/imageview"
            android:layout_width="fill_parent"
            android:layout_height="333dp"
            android:layout_gravity="center" />

    </LinearLayout>
    <TextView
        android:id="@+id/myshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/wait_detect" />
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_pick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pick"
            android:onClick="click"
            android:background="@drawable/button_style"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/btn_plate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/planedetect"
            android:onClick="click"
            android:background="@drawable/button_style"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="确定"
            android:background="@drawable/button_style"
            android:layout_margin="5dp"
            />
    </LinearLayout>
</LinearLayout>
